# shape-area-lib

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/shape_area_lib/: shapes.py
tests/: test_shapes.py
