[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shape-area-lib"
version = "0.1.0"
description = "Библиотека для расчёта площадей фигур"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "MordXD", email = "kotkinegor78@gmail.com" }
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.hatch.build.targets.wheel]
packages = ["src/shape_area_lib"] 